kubernetes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-python-deployment
  namespace: devsutest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-devops-python
  template:
    metadata:
      labels:
        app: demo-devops-python
    spec:
      containers:
      - name: demo-devops-python
        image: devsu/test-example-01:python-app-1.0
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-python-service
spec:
  selector:
    app: demo-devops-python
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
 --- 
apiVersion: v1
kind: ConfigMap
metadata:
  name: demo-devops-python-configmap
data:
  DJANGO_SECRET_KEY: "django-insecure-wc2i2*6^17$9!u+(u66@q_rg)++n1x-^(0-$3yz2f(n=_-o*7="
  DATABASE_NAME: "db.sqlite3"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-python-ingress
spec:
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-devops-python-service
            port:
              number: 80
